<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8F4E7"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="112dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="95dp"
                android:layout_height="95dp"
                app:srcCompat="@drawable/stepup_logo_bunny_small" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/intro_setup"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/prompt_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="John Doe"
            android:inputType="text"
            android:text=""
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/prompt_goal"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="#55BF73"
                android:text="@string/goal_steps_one"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:backgroundTint="#55BF73"
                android:text="@string/goal_steps_two"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:backgroundTint="#55BF73"
                android:text="@string/goal_steps_three"
                android:textSize="12sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/custom_steps"
            android:inputType="number"
            android:text=""
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/prompt_location"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:columnCount="2"
            android:rowCount="5">

            <CheckBox
                android:id="@+id/checkAmusements"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                android:text="@string/interest_two"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkArchitecture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                android:text="@string/interest_three"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkCultural"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                android:text="@string/interest_four"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkShops"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                android:text="@string/interest_five"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkFoods"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                android:text="@string/interest_six"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkSport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                android:text="@string/interest_seven"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkHistorical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                android:text="@string/interest_eight"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkNatural"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                android:text="@string/interest_nine"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkOther"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                android:text="@string/interest_ten"
                android:textColor="@color/black" />
        </GridLayout>

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#55BF73"
            android:text="Continue" />

    </LinearLayout>
</ScrollView>
